--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.4.1",
+    "async": "^2.5.0",
     "body-parser": "^1.17.2",
     "csvjson": "^4.3.3",
     "express": "^4.15.3",
+    "fs": "0.0.1-security",
     "jquery": "^3.2.1",
-    "request": "^2.81.0"
+    "nodemailer": "^4.0.1",
+    "path": "^0.12.7",
+    "request": "^2.81.0",
+    "sendgrid": "^5.1.1",
+    "url": "^0.11.0"
   }
 }
