--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "batching",
   "version": "1.0.1",
-  "description": "",
   "engines": {
     "node": "6.10.2"
   },
@@ -18,10 +17,23 @@
     "express": "^4.15.3",
     "fs": "0.0.1-security",
     "jquery": "^3.2.1",
+    "mongodb": "^2.2.30",
+    "mongoose": "^4.11.1",
     "nodemailer": "^4.0.1",
+    "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
     "sendgrid": "^5.1.1",
     "url": "^0.11.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nodeside/dataTrainer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nodeside/dataTrainer/issues"
+  },
+  "homepage": "https://github.com/nodeside/dataTrainer#readme",
+  "description": ""
 }
