--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "fs": "0.0.1-security",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.30",
-    "mongoose": "^4.11.1",
+    "mongoose": "^4.11.4",
     "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
     "sendgrid": "^5.1.1",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {},
   "repository": {
