--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.3",
     "fs": "0.0.1-security",
     "jquery": "^3.2.1",
+    "json2csv": "^3.10.0",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.4",
     "nodemailer": "^4.0.1",
